white space fix

--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,6 +1,5 @@
 .container-fluid {
   background: #edf0e8 url(assets/bg2.gif) repeat !important;
-  padding-bottom: 25px;
   font-family: sans-serif;
 }
 
@@ -110,14 +109,15 @@
 }
 
 @media screen and (min-width: 768px) {
-  .map {
-    width: 85%;
-    margin: auto;
+  .container-fluid {
+    background: #edf0e8 url(assets/bg2.gif) repeat !important;
+    padding-bottom: 60px;
+    font-family: sans-serif;
   }
 
   agm-map {
     width: 100%;
-    height: 660px;
+    height: 700px;
     margin: 0 auto;
   }
 
@@ -148,7 +148,7 @@
 }
 
 input[type='text'] {
-  background: white url(assets/search.png) no-repeat ;
+  background: white url(assets/search.png) no-repeat;
 }
 
 select.form-control:not([size]):not([multiple]) {
